name changed and optimize algo for model

--- a/Ashutosh_Chauhan_Clustering.ipynb
+++ b/Ashutosh_Chauhan_Clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,21 +48,18 @@
     "\n",
     "# Aggregate transaction data for each customer\n",
     "customer_features = merged_data.groupby('CustomerID').agg({\n",
-    "    'TotalValue': 'sum',  # Total spending\n",
-    "    'TransactionID': 'count',  # Number of transactions\n",
-    "    'Price': 'mean',  # Average transaction value\n",
-    "    'Region': 'first',  # Region of customer\n",
-    "    'SignupDate': 'first'  # Signup date\n",
+    "    'TotalValue': 'sum', \n",
+    "    'TransactionID': 'count',  \n",
+    "    'Price': 'mean', \n",
+    "    'Region': 'first', \n",
+    "    'SignupDate': 'first'\n",
     "}).reset_index()\n",
     "\n",
-    "# Convert SignupDate to numerical format (days since minimum date)\n",
     "customer_features['SignupDate'] = (customer_features['SignupDate'] - customer_features['SignupDate'].min()).dt.days\n",
     "\n",
-    "# One-hot encode categorical features (Region)\n",
     "encoder = OneHotEncoder()\n",
     "region_encoded = encoder.fit_transform(customer_features[['Region']]).toarray()\n",
     "\n",
-    "# Combine numerical and one-hot encoded features\n",
     "numerical_features = customer_features[['TotalValue', 'TransactionID', 'Price', 'SignupDate']]\n",
     "feature_matrix = np.hstack([numerical_features.values, region_encoded])\n",
     "\n",
@@ -74,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -108,12 +105,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Clustering results saved to Data/Customer_Clusters.csv\n"
+      "Clustering results saved to Data/Ashutosh_Chauhan_Clustering.csv\n"
      ]
     }
    ],
    "source": [
-    "# Perform clustering (K-Means)\n",
+    "# Perform clustering\n",
     "import os\n",
     "os.environ[\"LOKY_MAX_CPU_COUNT\"] = \"4\"\n",
     "print(\"warning is silenced\")\n",
@@ -126,7 +123,6 @@
     "    kmeans = KMeans(n_clusters=k, random_state=42)\n",
     "    cluster_labels = kmeans.fit_predict(feature_matrix_scaled)\n",
     "\n",
-    "    # Evaluate clustering\n",
     "    db_index = davies_bouldin_score(feature_matrix_scaled, cluster_labels)\n",
     "    silhouette_avg = silhouette_score(feature_matrix_scaled, cluster_labels)\n",
     "\n",
@@ -142,11 +138,9 @@
     "k_optimal, db_optimal = optimal_clusters\n",
     "print(f\"Optimal Clusters: {k_optimal}, DB Index: {db_optimal:.4f}\")\n",
     "\n",
-    "# Fit final model\n",
     "kmeans = KMeans(n_clusters=k_optimal, random_state=42)\n",
     "final_labels = kmeans.fit_predict(feature_matrix_scaled)\n",
     "\n",
-    "# Add cluster labels to customer data\n",
     "customer_features['Cluster'] = final_labels\n",
     "\n",
     "# Visualize clusters using PCA\n",
@@ -161,12 +155,9 @@
     "plt.legend(title='Cluster')\n",
     "plt.show()\n",
     "\n",
-    "# Save clustering results\n",
-    "# output_path = '/mnt/data/Customer_Clusters.csv'\n",
-    "output_path = \"Data/Customer_Clusters.csv\"\n",
     "\n",
+    "output_path = \"Data/Ashutosh_Chauhan_Clustering.csv\"\n",
     "customer_features.to_csv(output_path, index=False)\n",
-    "\n",
     "print(f\"Clustering results saved to {output_path}\")\n"
    ]
   }
