--- a/Ashutosh_Chauhan_EDA.ipynb
+++ b/Ashutosh_Chauhan_EDA.ipynb
@@ -13,7 +13,7 @@
         "import seaborn as sns\n",
         "from matplotlib.backends.backend_pdf import PdfPages\n",
         "\n",
-        "# Function to load and merge datasets efficiently\n",
+        "# Function to load and merge datasets\n",
         "def load_data():\n",
         "    \"\"\"Load and merge datasets efficiently\"\"\"\n",
         "    customers = pd.read_csv('DataFile/Customers.csv', parse_dates=['SignupDate'])\n",
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -55,7 +55,7 @@
         "    \"\"\"Generate all plots and return figure objects\"\"\"\n",
         "    figures = []\n",
         "\n",
-        "    # Plot 1: Transaction Value Distribution\n",
+        "    # Transaction Value Distribution\n",
         "    fig1, ax1 = plt.subplots(figsize=(10, 6))\n",
         "    sns.histplot(df['TotalValue'], bins=30, kde=True, ax=ax1)\n",
         "    ax1.set(title='Distribution of Total Transaction Values',\n",
@@ -63,7 +63,7 @@
         "    figures.append(fig1)\n",
         "    print(\"Transaction Value Distribution successfully completed\")\n",
         "\n",
-        "    # Plot 2: Customer Distribution by Region\n",
+        "    # Customer Distribution by Region\n",
         "    fig2, ax2 = plt.subplots(figsize=(10, 6))\n",
         "    region_counts = customers['Region'].value_counts()\n",
         "    sns.barplot(x=region_counts.index, y=region_counts.values, ax=ax2)\n",
@@ -72,7 +72,7 @@
         "    figures.append(fig2)\n",
         "    print(\"Customer Distribution by Region successfully completed\")\n",
         "\n",
-        "    # Plot 3: Top Performing Products\n",
+        "    # Top Performing Products\n",
         "    top_products = df.groupby('ProductName')['TotalValue'].sum().nlargest(10)\n",
         "    fig3, ax3 = plt.subplots(figsize=(12, 6))\n",
         "    top_products.plot(kind='barh', color='teal', ax=ax3)\n",
@@ -81,7 +81,7 @@
         "    figures.append(fig3)\n",
         "    print(\"Top Performing Products successfully completed\")\n",
         "\n",
-        "    # Plot 4: Monthly Trends\n",
+        "    # Monthly Trends\n",
         "    df['Month'] = df['TransactionDate'].dt.to_period('M').astype(str)\n",
         "    monthly_trends = df.groupby('Month')['TotalValue'].sum()\n",
         "    fig4, ax4 = plt.subplots(figsize=(12, 6))\n",
@@ -91,7 +91,7 @@
         "    figures.append(fig4)\n",
         "    print(\"Monthly Trends successfully completed\")\n",
         "\n",
-        "    # Plot 5: Regional Spending Analysis\n",
+        "    # Regional Spending Analysis\n",
         "    region_stats = df.groupby('Region')['TotalValue'].agg(['mean', 'sum'])\n",
         "    fig5, (ax5a, ax5b) = plt.subplots(1, 2, figsize=(16, 6))\n",
         "    region_stats['mean'].plot(kind='bar', color='salmon', ax=ax5a)\n",
@@ -105,21 +105,20 @@
         "\n",
         "# Main function\n",
         "if __name__ == '__main__':\n",
-        "    # Configure visual settings\n",
+        "    # Configure settings\n",
         "    sns.set_style('whitegrid')\n",
         "    plt.rcParams.update({'font.size': 12})\n",
         "\n",
         "    # Load and prepare data\n",
         "    customers = pd.read_csv('DataFile/Customers.csv', parse_dates=['SignupDate'])\n",
         "    merged_data = load_data()\n",
-        "\n",
-        "    # Generate all plots and save them in a PDF\n",
-        "    with PdfPages('Data/EDA_Report.pdf') as pdf:\n",
+        "    \n",
+        "    # generrating plot\n",
+        "    with PdfPages('Data/Ashutosh_Chauhan_EDA.pdf') as pdf:\n",
         "        for fig in generate_plots(merged_data, customers):\n",
         "            pdf.savefig(fig)\n",
         "            plt.close(fig)\n",
-        "\n",
-        "        # Add statistics page\n",
+        "            \n",
         "        stats_page = plt.figure(figsize=(11, 8))\n",
         "        stats_text = [\n",
         "            \"Key Statistics:\",\n",
