--- a/Ashutosh_Chauhan_Lookalike.ipynb
+++ b/Ashutosh_Chauhan_Lookalike.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "181bd41b-e068-4ef2-ac9f-b775c77f7ad8",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "9a07c71d",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "2813be94",
    "metadata": {},
    "outputs": [
@@ -62,32 +62,29 @@
     }
    ],
    "source": [
-    "# Filter for the first 20 customers (C0001 - C0020)\n",
+    "# Filter for the first 20 customers\n",
     "target_customers = customers[customers['CustomerID'].isin([f\"C{str(i).zfill(4)}\" for i in range(1, 21)])]\n",
     "\n",
     "# Prepare feature set by merging datasets\n",
     "customer_features = merged_data.groupby('CustomerID').agg({\n",
-    "    'TotalValue': 'sum',  # Total spending\n",
-    "    'TransactionID': 'count',  # Number of transactions\n",
-    "    'Category': lambda x: ','.join(x),  # Categories purchased\n",
-    "    'Region': 'first',  # Region of customer\n",
-    "    'SignupDate': 'first'  # Signup date\n",
+    "    'TotalValue': 'sum',  \n",
+    "    'TransactionID': 'count', \n",
+    "    'Category': lambda x: ','.join(x),  \n",
+    "    'Region': 'first', \n",
+    "    'SignupDate': 'first'\n",
     "}).reset_index()\n",
     "\n",
-    "# One-hot encode categorical features (Region and Categories)\n",
     "encoder = OneHotEncoder()\n",
     "region_encoded = encoder.fit_transform(customer_features[['Region']]).toarray()\n",
     "\n",
-    "# Convert SignupDate to numerical format (days since minimum date)\n",
     "customer_features['SignupDate'] = (customer_features['SignupDate'] - customer_features['SignupDate'].min()).dt.days\n",
     "\n",
-    "# Create a binary matrix for categories purchased\n",
     "categories = customer_features['Category'].str.get_dummies(sep=',')\n",
     "customer_features = customer_features.drop('Category', axis=1)\n",
     "feature_matrix = np.hstack([\n",
-    "    customer_features[['TotalValue', 'TransactionID', 'SignupDate']].values,  # Numeric features\n",
-    "    region_encoded,  # Region features\n",
-    "    categories.values  # Categories binary matrix\n",
+    "    customer_features[['TotalValue', 'TransactionID', 'SignupDate']].values, \n",
+    "    region_encoded, \n",
+    "    categories.values  \n",
     "])\n",
     "\n",
     "# Scale feature matrix\n",
@@ -97,23 +94,22 @@
     "# Compute cosine similarity\n",
     "similarity_matrix = cosine_similarity(feature_matrix_scaled)\n",
     "\n",
-    "# Generate recommendations for the first 20 customers\n",
-    "recommendations = {}\n",
+    "# recommendations for the first 20 customers\n",
+    "result = {}\n",
     "for idx, customer_id in enumerate(target_customers['CustomerID']):\n",
-    "    # Get similarity scores for the current customer\n",
     "    scores = similarity_matrix[idx]\n",
     "    similar_customers = sorted(\n",
     "        [(other_id, score) for other_id, score in zip(customer_features['CustomerID'], scores) if other_id != customer_id],\n",
     "        key=lambda x: x[1],\n",
     "        reverse=True\n",
-    "    )[:3]  # Top 3 similar customers\n",
-    "    recommendations[customer_id] = similar_customers\n",
+    "    )[:3]\n",
+    "    result[customer_id] = similar_customers\n",
     "print(\"Generate recommendations for the first 20 customers\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "ef8a75a4",
    "metadata": {},
    "outputs": [
@@ -121,31 +117,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lookalike.csv has been saved at Data/Lookalike.csv\n"
+      "Lookalike.csv has been saved at Data/Ashutosh_Chauhan_Lookalike.csv\n"
      ]
     }
    ],
    "source": [
-    "recommendations = {}\n",
+    "result = {}\n",
     "for idx, customer_id in enumerate(target_customers['CustomerID']):\n",
-    "    # Get similarity scores for the current customer\n",
+    "\n",
     "    scores = similarity_matrix[idx]\n",
     "    similar_customers = sorted(\n",
     "        [(other_id, score) for other_id, score in zip(customer_features['CustomerID'], scores) if other_id != customer_id],\n",
     "        key=lambda x: x[1],\n",
     "        reverse=True\n",
-    "    )[:3]  # Top 3 similar customers\n",
-    "    recommendations[customer_id] = similar_customers\n",
+    "    )[:3]\n",
+    "    result[customer_id] = similar_customers\n",
     "\n",
-    "# Create Lookalike.csv\n",
     "lookalike_df = pd.DataFrame({\n",
-    "    \"CustomerID\": recommendations.keys(),\n",
-    "    \"Recommendations\": [str(rec) for rec in recommendations.values()]\n",
+    "    \"CustomerID\": result.keys(),\n",
+    "    \"Recommendations\": [str(rec) for rec in result.values()]\n",
     "})\n",
     "\n",
-    "output_path = 'Data/Lookalike.csv'\n",
+    "output_path = 'Data/Ashutosh_Chauhan_Lookalike.csv'\n",
     "lookalike_df.to_csv(output_path, index=False)\n",
-    "\n",
     "print(f\"Lookalike.csv has been saved at {output_path}\")"
    ]
   },
