--- a/Ashutosh_Chauhan_Lookalike.ipynb
+++ b/Ashutosh_Chauhan_Lookalike.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "181bd41b-e068-4ef2-ac9f-b775c77f7ad8",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dataset succefully loaded\n"
+      "Datasets successfully loaded.\n"
      ]
     }
    ],
@@ -24,12 +24,12 @@
     "customers = pd.read_csv('DataFile/Customers.csv', parse_dates=['SignupDate'])\n",
     "products = pd.read_csv('DataFile/Products.csv')\n",
     "transactions = pd.read_csv('DataFile/Transactions.csv', parse_dates=['TransactionDate'])\n",
-    "print(\"dataset succefully loaded\")"
+    "print(\"Datasets successfully loaded.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "9a07c71d",
    "metadata": {},
    "outputs": [
@@ -42,14 +42,15 @@
     }
    ],
    "source": [
-    "transactions_with_products = pd.merge(transactions, products, on='ProductID', how='inner')\n",
-    "merged_data = pd.merge(customers, transactions_with_products, on='CustomerID', how='inner')\n",
+    "# Merge datasets\n",
+    "merged_data = transactions.merge(customers, on='CustomerID', how='left')\n",
+    "merged_data = merged_data.merge(products, on='ProductID', how='left')\n",
     "print(\"dataset succefully merged\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "2813be94",
    "metadata": {},
    "outputs": [
@@ -57,7 +58,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generate recommendations for the first 20 customers\n"
+      "all the feature are computed\n"
      ]
     }
    ],
@@ -65,51 +66,42 @@
     "# Filter for the first 20 customers\n",
     "target_customers = customers[customers['CustomerID'].isin([f\"C{str(i).zfill(4)}\" for i in range(1, 21)])]\n",
     "\n",
-    "# Prepare feature set by merging datasets\n",
+    "# Prepare feature set by customer data\n",
     "customer_features = merged_data.groupby('CustomerID').agg({\n",
     "    'TotalValue': 'sum',  \n",
     "    'TransactionID': 'count', \n",
-    "    'Category': lambda x: ','.join(x),  \n",
+    "    'Category': lambda x: ','.join(x), \n",
     "    'Region': 'first', \n",
-    "    'SignupDate': 'first'\n",
+    "    'SignupDate': 'first',  \n",
+    "    'TransactionDate': lambda x: (x.max() - x.min()).days\n",
     "}).reset_index()\n",
+    "\n",
     "\n",
     "encoder = OneHotEncoder()\n",
     "region_encoded = encoder.fit_transform(customer_features[['Region']]).toarray()\n",
     "\n",
     "customer_features['SignupDate'] = (customer_features['SignupDate'] - customer_features['SignupDate'].min()).dt.days\n",
+    "customer_features.rename(columns={'TransactionDate': 'Recency'}, inplace=True)\n",
     "\n",
     "categories = customer_features['Category'].str.get_dummies(sep=',')\n",
     "customer_features = customer_features.drop('Category', axis=1)\n",
+    "\n",
     "feature_matrix = np.hstack([\n",
-    "    customer_features[['TotalValue', 'TransactionID', 'SignupDate']].values, \n",
+    "    customer_features[['TotalValue', 'TransactionID', 'SignupDate', 'Recency']].values,  # Numeric features\n",
     "    region_encoded, \n",
-    "    categories.values  \n",
+    "    categories.values \n",
     "])\n",
     "\n",
-    "# Scale feature matrix\n",
     "scaler = MinMaxScaler()\n",
     "feature_matrix_scaled = scaler.fit_transform(feature_matrix)\n",
     "\n",
-    "# Compute cosine similarity\n",
     "similarity_matrix = cosine_similarity(feature_matrix_scaled)\n",
-    "\n",
-    "# recommendations for the first 20 customers\n",
-    "result = {}\n",
-    "for idx, customer_id in enumerate(target_customers['CustomerID']):\n",
-    "    scores = similarity_matrix[idx]\n",
-    "    similar_customers = sorted(\n",
-    "        [(other_id, score) for other_id, score in zip(customer_features['CustomerID'], scores) if other_id != customer_id],\n",
-    "        key=lambda x: x[1],\n",
-    "        reverse=True\n",
-    "    )[:3]\n",
-    "    result[customer_id] = similar_customers\n",
-    "print(\"Generate recommendations for the first 20 customers\")"
+    "print(\"all the feature are computed\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "ef8a75a4",
    "metadata": {},
    "outputs": [
@@ -124,7 +116,6 @@
    "source": [
     "result = {}\n",
     "for idx, customer_id in enumerate(target_customers['CustomerID']):\n",
-    "\n",
     "    scores = similarity_matrix[idx]\n",
     "    similar_customers = sorted(\n",
     "        [(other_id, score) for other_id, score in zip(customer_features['CustomerID'], scores) if other_id != customer_id],\n",
